[NEW] initial commit

--- a/examples/libero/compose.yml
+++ b/examples/libero/compose.yml
@@ -46,6 +46,7 @@ services:
       - SERVER_ARGS
       - OPENPI_DATA_HOME=/openpi_assets
       - IS_DOCKER=true
+      - PYTHONUNBUFFERED=1
 
     # Comment out this block if not running on a machine with GPUs.
     deploy:
